
--------------------------------------------------------------------------------
Changes for 2.0.5rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)

Bug fixes:
.......PS. [ZBX-5988] fixed memory leak in functions evaluate_LOGEVENTID(), evaluate_STR(), DBlld_process_discovery_rule(). Thanks to Takanori Suzuki for patch (Andris, Sasha)
...G...... [ZBX-5940] fixed displaying default key parameters when agent is used with option -p (Andris)
.......PS. [ZBX-5981] fixed incorrect use of function assert() if build option -DNDEBUG was used, it caused random crashes (Alexei)
.......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
A.F....... [ZBX-6002] optimized fetching latest service alarms in Service API (dotneft, Eduard)
..F....... [ZBX-5986] fixed page filter in monitoring->graphs (Oleg)
..F....... [ZBX-6004] monitoring->screens page optimization (Vedmak)
..F....... [ZBX-6003] monitoring->maps page optimization (Vedmak)
A.F.....S. [ZBX-5862] fixed sql condition algorithm (Andris, Eduard, Sasha)
A.F....... [ZBX-4789] improved performance of permissions check (Oleg, dotneft, Sasha)
..F....... [ZBX-5979] fixed monitoring events page, hidden triggers with not monitored items (Oleg)
..F....... [ZBX-5985] fixed DB error in "Configuration of web monitoring" for PostgreSQL (Oleg)
..F....... [ZBX-5699] fixed configuration graph host id passing in navigation (Eduard)
A......... [ZBX-1946] improved error messages when validating screen item row and column spans (Pavels)
..F....... [ZBX-3402] disabled "store value" overriding for host items inherited from templates (Pavels)
..F....... [ZBX-3402] fixed the "formula" input not being displayed when editing templated items with a disabled multiplier (Pavels)
.......PS. [ZBX-3071] fixed reading and writing of Oracle NCLOB fields (Andris, Sasha)